@@ -284,6 +284,18 @@ name|util
 operator|.
 name|concurrent
 operator|.
+name|ConcurrentHashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|concurrent
+operator|.
 name|TimeUnit
 import|;
 end_import
@@ -12344,19 +12356,10 @@ name|Stat
 argument_list|>
 name|stats
 init|=
-name|Collections
-operator|.
-name|synchronizedMap
-argument_list|(
 operator|new
-name|HashMap
-argument_list|<
-name|String
-argument_list|,
-name|Stat
-argument_list|>
+name|ConcurrentHashMap
+argument_list|<>
 argument_list|()
-argument_list|)
 decl_stmt|;
 DECL|method|getStats
 specifier|public
@@ -12476,11 +12479,6 @@ operator|.
 name|ROOT
 argument_list|)
 decl_stmt|;
-synchronized|synchronized
-init|(
-name|stats
-init|)
-block|{
 name|Stat
 name|stat
 init|=
@@ -12522,7 +12520,6 @@ name|incrementAndGet
 argument_list|()
 expr_stmt|;
 block|}
-block|}
 DECL|method|error
 specifier|public
 name|void
@@ -12544,11 +12541,6 @@ operator|.
 name|ROOT
 argument_list|)
 decl_stmt|;
-synchronized|synchronized
-init|(
-name|stats
-init|)
-block|{
 name|Stat
 name|stat
 init|=
@@ -12590,7 +12582,6 @@ name|incrementAndGet
 argument_list|()
 expr_stmt|;
 block|}
-block|}
 DECL|method|time
 specifier|public
 name|TimerContext
@@ -12614,21 +12605,14 @@ argument_list|)
 decl_stmt|;
 name|Stat
 name|stat
-decl_stmt|;
-synchronized|synchronized
-init|(
-name|stats
-init|)
-block|{
-name|stat
-operator|=
+init|=
 name|stats
 operator|.
 name|get
 argument_list|(
 name|op
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
 name|stat
@@ -12651,7 +12635,6 @@ argument_list|,
 name|stat
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return
 name|stat
@@ -12691,21 +12674,14 @@ argument_list|)
 decl_stmt|;
 name|Stat
 name|stat
-decl_stmt|;
-synchronized|synchronized
-init|(
-name|stats
-init|)
-block|{
-name|stat
-operator|=
+init|=
 name|stats
 operator|.
 name|get
 argument_list|(
 name|op
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 if|if
 condition|(
 name|stat
@@ -12773,7 +12749,6 @@ name|resp
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 block|}
 DECL|method|getFailureDetails
